Updating versions of Gatling, Gradle and Java